--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 UserInterfaceState.xcuserstate
+Pitch Perfect.xcodeproj/project.xcworkspace/xcuserdata/jeredyang.xcuserdatad/UserInterfaceState.xcuserstate
